...
    <string name="add_images">Add images</string>
    <string name="add_item">Add Item</string>
    <string name="add_label">Add label</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="adding_files">Adding files</string>
    <string name="adding_images">Adding images</string>
    <string name="all">All</string>
    <string name="always_show_search_bar">Always show search bar expanded</string>
    <string name="always_show_search_bar_hint">By enabling this, the search bar will always be shown in the layout instead of using a search icon in the top bar</string>
    <string name="app_name" translatable="false">NotallyX</string>
    <string name="appearance">Appearance</string>
    <string name="archive">Archive</string>
    <string name="archived">Archived</string>
...
    </plurals>
    <string name="edit">Edit</string>
    <string name="edit_color">Edit Color</string>
    <string name="edit_label">Edit label</string>
    <string name="edit_link">Edit Link</string>
    <string name="edit_reminders">Edit Reminders</string>
    <string name="elapsed">Elapsed</string>
    <string name="empty_labels">No labels yet. Create one\?</string>
    <string name="empty_list">Empty list</string>
    <string name="empty_note">Empty note</string>
    <string name="empty_reminders">No reminders yet. Create one\?</string>
    <string name="enable_lock_description">This will also encrypt the database</string>
    <string name="enable_lock_title">Enable lock via Biometric/PIN</string>
...
    <string name="recording">Recording…</string>
    <string name="redo">Redo</string>
    <string name="reimport_database">Reimport DB</string>
    <string name="reimport_database_failed">Reimporting Database failed</string>
    <string name="reimport_database_message">You can now try to reimport the raw database. This deletes the current corrupted database (a backup will be stored in \'Android/media/com.philkes.notallyx/logs\') and then tries to import the raw database by skipping corrupted notes if possible</string>
    <string name="reminder_no_repetition">No repetition</string>
    <string name="reminders">Reminders</string>
    <string name="remove_link">Remove Link</string>
    <string name="repetition">Repetition</string>
    <string name="repetition_custom">Custom Repetition</string>
    <string name="repetition_value_hint">Value</string>
    <string name="report_bug">Report Bug</string>
    <string name="report_bug_stacktrace_too_long">The crash logs are too long to automatically pre-fill the Github issue with it, therefore the crash logs have been copied to your clipboard.\nWhen you click \'%1$s\', your browser will open to create a Github issue for your crash.It is important that you paste the automatically copied crash logs into the Github issue\'s \'(Optional) Relevant log ou
...
    <string name="unknown_name">Unknown name</string>
    <string name="unlabeled">Unlabeled</string>
    <string name="unlock">Unlock via Biometric/PIN</string>
    <string name="unlock_with_biometrics_not_setup">You have previously enabled biometric lock but Biometrics/PIN are not setup for your device anymore.\n\nIf you wish to disable biometric lock press Disable, otherwise setup Biometrics/PIN for your device</string>
    <string name="unpin">Unpin</string>
    <string name="unpin_from_status_bar">Unpin from status bar</string>
    <string name="upcoming">Upcoming</string>
    <string name="updated_link">Updated Link</string>
    <string name="view">View</string>
    <string name="view_crash_logs">View Crash Logs</string>
    <string name="view_file">View file</string>
    <string name="view_logs">View Log File</string>
    <string name="view_note">View note</string>
...
